[package]
name = "dsz"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cached = { version = "0.51", features = ["proc_macro"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dunce = "1.0"
itertools = "0.13"
num-format = { version = "0.4", features = ["with-system-locale"] }
once_cell = "1.19"
spinners = "4.1"
walkdir = "2"
