[package]
name = "dsz"
version = "0.4.2"
edition = "2021"
default-run = "dsz"

[[bin]]
name = "dsz"
path = "src/main.rs"

[[bin]]
name = "dsz-completion"
path = "src/bin/completion.rs"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[dependencies]
anyhow.workspace = true
cached = { version = "0.51", features = ["proc_macro"] }
chrono = "0.4"
clap.workspace = true
cli = { path = "cli" }
itertools = "0.13"
num-format = { version = "0.4", features = ["with-system-locale"] }
once_cell = "1.19"
spinners = "4.1"
walkdir = "2"

[build-dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete = "4"
cli = { path = "cli" }
