[package]
name = "dsz"
version = "0.4.2"
edition = "2021"
default-run = "dsz"

[[bin]]
name = "dsz"
path = "src/main.rs"

[[bin]]
name = "completion"
path = "src/bin/completion.rs"
required-features = ["completion"]

[features]
default = []
completion = ["clap_complete"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[dependencies]
anyhow.workspace = true
cached = { version = "0.52", features = ["proc_macro"] }
chrono = "0.4"
clap.workspace = true
clap_complete = { version = "4", optional = true }
cli = { path = "cli" }
itertools = "0.13"
num-format = { version = "0.4", features = ["with-system-locale"] }
once_cell = "1.19"
spinners = "4.1"
walkdir = "2"
# this updated and broke num-format so we need to manually add it here
winapi = { version="0.3.9", features=["errhandlingapi"] }

[build-dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete = "4"
cli = { path = "cli" }
# winapi's last update broke num-format, it requires this feature
winapi = { version="0.3.9", features=["errhandlingapi"] }
